@@ -1,2 +1,68 @@
 # JavaFx-Interval-Radio-Buttons-Note-Sliders
-JavaFx-Graphical User Interfaces
+This JavaFX application provides a user interface for configuring musical sampling jobs using interval radio buttons and note sliders
+
+## Files Overview
+
+- `Job.java`: Describes a sampling job with successive notes.
+- `IntervalRadioButtons.java`: JavaFX application for configuring musical sampling jobs using interval radio buttons and note sliders.
+
+
+## Features
+
+- Interval Selection: Users can select the interval between musical notes using radio buttons representing intervals of one, three, six, or twelve semitones.
+- Note Range: Users can specify the range of musical notes by setting the starting and ending notes using spinner controls.
+- Job Name: Users can enter a custom name for the job using a text field.
+- Note Timing Parameters: Users can adjust the duration, decay, and gap between notes using sliders. The application provides a visual representation of these timing parameters.
+- Update Job: Users can update the job with the specified parameters by clicking the "Update Job" button.
+
+
+
+## Running the Application
+
+1. Compile the IntervalRadioButtons.java file:
+
+ ```bash
+javac --module-path "--check from javafx-sdk-21.0.2 % pwd---then paste to here" --add-modules javafx.controls IntervalRadioButtons.java
+
+```
+2. Run the application:
+   
+```bash
+java --module-path "--check from javafx-sdk-21.0.2 % pwd---then paste to here" --add-modules javafx.controls IntervalRadioButtons
+
+```
+## Demo
+<!-- Image 1 -->
+<p align="center">
+  <img src="https://github.com/xiaosihuangsi/JavaFx-Interval-Radio-Buttons-Note-Sliders/blob/main/Demo_1.png" width="600" />
+  <br />
+  <em>Image 1</em>
+</p>
+
+<!-- Image 2 -->
+<p align="center">
+  <img src="https://github.com/xiaosihuangsi/JavaFx-Interval-Radio-Buttons-Note-Sliders/blob/main/Demo_2.png" width="600" />
+  <br />
+  <em>Image 2</em>
+</p>
+
+<!-- Image 3 -->
+<p align="center">
+  <img src="https://github.com/xiaosihuangsi/JavaFx-Interval-Radio-Buttons-Note-Sliders/blob/main/Demo_3.png" alt="Image 3" width="600" />
+  <br />
+  <em>Image 3</em>
+</p>
+
+<!-- Image 4 -->
+<p align="center">
+  <img src="https://github.com/xiaosihuangsi/JavaFx-Interval-Radio-Buttons-Note-Sliders/blob/main/Demo_4.png" alt="Image 4" width="600" />
+  <br />
+  <em>Image 4</em>
+</p>
+
+<!-- Image 5 -->
+<p align="center">
+  <img src="https://github.com/xiaosihuangsi/JavaFx-Interval-Radio-Buttons-Note-Sliders/blob/main/Demo_5.png" alt="Image 5" width="600" />
+  <br />
+  <em>Image 5</em>
+</p>
